less/static-pages/kundservice.less
@import (reference) "../../affresco/less/ksf-colors.less";

.static-page__customer-service {
  display: flex;
  flex-direction: column;
  margin-bottom: 30px;
  @media (min-width: @breakpoint-2col) {
    flex-direction: row;
    flex-wrap: wrap;
  }

.customer-service__background-img {
  align-self: center;
  background-image: url("../../images/illu-kundservice.svg");
  background-size: contain;
  background-repeat: no-repeat;
  width: 250px;
  height: 200px;
  @media (min-width: 481px) {
    align-self: flex-start;
  }
  @media (min-width: @breakpoint-2col) {
    width: 35%;
  }
  @media (min-width: @breakpoint-3col) {
    width: 30%;
  }
}

.customer-service__info {
  @media (min-width: @breakpoint-2col) {
    width: 65%;
    align-self: center;
    padding-right: 35px;
  }
  @media (min-width: @breakpoint-3col) {
    width: 70%;
  }
}

  .customer-service__headline {
    font-size: 2.2rem;
    line-height: 1;
    @media (min-width: @breakpoint-3col) {
      margin: 40px 0;
    }
  }

  .customer-service__menu-buttons {
    display: grid;
    grid-template-columns: 1fr;
    gap: 25px;
    margin-top: 30px;
    margin-bottom: 30px;
    width: 100%;
    @media (min-width: @breakpoint-2col) {
      padding: 0 35px;
      gap: 40px;
    }
    @media (min-width: @breakpoint-3col) {
      grid-template-columns: 1fr 1fr;
      padding: 0;
      gap: 30px 30px;
      margin-top: 50px;
    }
  }

  .customer-service__menu-button {
    padding: 15px 0;
    border: 0.5px solid @grey-dark;
    border-radius: 10px;
    text-align: center;
    font-weight: 500;
    cursor: pointer;
    @media (min-width: @breakpoint-2col) {
      padding: 20px 0;
      font-size: 1.2rem;
    }
  }

  a:link,
  a:visited {
    text-decoration: none;
    color: #333 !important;
  }
}

